# uim

./: .gitignore  Makefile.am  configure.ac
gtk4/immodule/: Makefile.am  candidates_panel.c  candidates_panel.h  gtk-im-uim.c  gtk-im-uim.h  keyutil.c  keyutil.h  preedit.c  preedit.h
scm/: byeoru.scm  generic.scm
